--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
